--- a/views/gigs.handlebars
+++ b/views/gigs.handlebars
@@ -6,7 +6,7 @@
       <h3>{{title}}</h3>
       <p>{{description}}</p>
       <ul>
-        <li>Budget: {{budget}}</li>
+        <li>Budget: &#8358;{{budget}}</li>
         <li><a href="mailto:{{contact_email}}" class="btn btn-reverse">Apply Now</a></li>
       </ul>
       <div class="tech">
